site/content/less/denvelop.less
// Using CSS property order as described loosely here:
//    http://markdotto.com/2011/11/29/css-property-order/.
// - positioning
// - display
// - box model (height, padding, margin, ...)
// - visual (font, color, background, border, box-shadow, ...)

@import "fonts.less";
@import "mixins.less";
@import "variables.less";
@import "normalize.less";

html {
    height: 100%;
    font-family: @font-family-main;
    font-size: @font-size;
    line-height: @line-height;
}

body {
    .bg-color(@color-main);
    height: 100%;
}

// general styling
@import "font-styles.less";
@import "header.less";
@import "content.less";
@import "footer.less";
@import "utilities.less";

// page-specific styling
@import "external-account.less";
@import "theme-swatches.less";

